--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+spring.datasource.url=jdbc:h2:./db/h2/database-dev;MODE=PostgreSQL;AUTO_SERVER=TRUE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
 spring.devtools.remote.restart.enabled=false
 spring.devtools.livereload.port=35728
 
